--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -6,3 +6,6 @@ linter:
     - directives_ordering
     - prefer_const_constructors
 
+analyzer:
+  errors:
+    invalid_use_of_visible_for_testing_member: error
