--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,17 @@ environment:
   sdk: ^3.7.0
 
 dependencies:
+  collection: ^1.19.1
   flutter:
     sdk: flutter
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  mockito: ^5.4.5
+  build_runner: ^2.4.15
 
 flutter:
   uses-material-design: true
