--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,10 @@ dependencies:
   collection: ^1.19.1
   flutter:
     sdk: flutter
+  flutter_svg: ^2.0.17
+  fuzzywuzzy: ^1.2.0
   http: ^1.3.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
@@ -20,4 +23,22 @@ dev_dependencies:
   build_runner: ^2.4.15
 
 flutter:
-  uses-material-design: true
+  assets:
+    - assets/test/bay.json
+    - assets/test/business.json
+    - assets/test/cryptocurrency.json
+    - assets/test/gaming.json
+    - assets/test/kite.json
+    - assets/test/onthisday.json
+    - assets/test/tech.json
+    - assets/test/serbia.json
+    - "assets/test/the netherlands.json"
+    - "assets/test/linux & oss.json"
+    - assets/test/science.json
+    - assets/test/sports.json
+    - assets/test/world.json
+    - assets/test/usa.json
+    - assets/test/romania.json
+    - assets/img/kite.svg
+    - assets/img/dark-theme.svg
+
