--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ^3.7.0
 
 dependencies:
+  cached_network_image: ^3.4.1
   collection: ^1.19.1
   flutter:
     sdk: flutter
@@ -14,6 +15,7 @@ dependencies:
   fuzzywuzzy: ^1.2.0
   http: ^1.3.0
   intl: ^0.20.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
@@ -40,5 +42,7 @@ flutter:
     - assets/test/usa.json
     - assets/test/romania.json
     - assets/img/kite.svg
+    - assets/img/kite-dark.svg
     - assets/img/dark-theme.svg
+    - assets/img/image-placeholder.svg
 
