--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   collection: ^1.19.1
   flutter:
     sdk: flutter
+  flutter_html: ^3.0.0
   flutter_svg: ^2.0.17
   fuzzywuzzy: ^1.2.0
   http: ^1.3.0
