--- a/web/manifest.json
+++ b/web/manifest.json
@@ -4,8 +4,8 @@
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "theme_color": "#F3B644",
+    "description": "A keyboard-friendly frontend for kite.kagi.com",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
